# bookmark-ai-summary

./: .gitignore  CAPTCHA_Bypass_Technical_Analysis_2024.md  CLAUDE.md  README.md  pyproject.toml  start.md  tag_summary.md  test_captcha_fix.py  test_real_captcha_scenario.py
.claude/plan/: 文件名长度优化.md
.github/workflows/: build_weekly_release.yml  process_weekly_articles.yml
config/: headless_config.json
data/: data.json
data/202410/: 2024-10-12-kafka-producer-发送消息原理.md  2024-10-12-kafka-producer-发送消息原理_raw.md  2024-10-12-kafka延迟任务时间轮解析.md  2024-10-12-kafka延迟任务时间轮解析_raw.md  2024-10-12-llm-x-书签收藏：摘要-&-全文索引---nekonull's-garden.md  2024-10-12-putting-the-you-in-cpu.md  2024-10-12-putting-the-you-in-cpu_raw.md  2024-10-12-web2rss.md  2024-10-12-web2rss_raw.md  2024-10-12-【jvm系列】内存布局详解.md  2024-10-12-【jvm系列】内存布局详解_raw.md  2024-10-12-【系统设计】--常见缓存策略&一致性保障.md  2024-10-12-【系统设计】--常见缓存策略&一致性保障_raw.md  2024-10-12-【网站自荐】投资策略模拟器---通过直观可视化界面和详细数据分析，让用户深入了解各种投资策略优劣，从而做出更明智投资决策-·-issue-#5288-·-ruanyf-weekly.md  2024-10-12-【网站自荐】投资策略模拟器---通过直观可视化界面和详细数据分析，让用户深入了解各种投资策略优劣，从而做出更明智投资决策-·-issue-#5288-·-ruanyf-weekly_raw.md  2024-10-12-一图看懂.git.md  2024-10-12-一图看懂.git_raw.md  (+170 more)
docs/: captcha-bypass-implementation.md  filename-configuration.md  filename-migration-guide.md  keyword-analysis-config.md  keyword-analysis-quickstart.md  security-and-performance-guide.md
scripts/: backup_long_filenames.py  keyword-analysis-cleanup.sh  keyword-analysis-health.sh  migrate_long_filenames.py  test_slugify.py  test_slugify_standalone.py
tests/: captcha_test.py  test_headless_extractor.py
(+919 files in other folders)
